address a few issues with dark mode and the debugger

--- a/packages/devtools/web/styles.css
+++ b/packages/devtools/web/styles.css
@@ -793,8 +793,3 @@ html [full] {
 span.strong {
     font-weight: 600;
 }
-
-.CodeMirror {
-    /* Override the CodeMirror theme to use our own background color */
-    background: var(--default-background) !important;
-}
